# air-controller

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: developer-guide.md  icon-assets.md  manual-test-gnome.md  release-checklist.md  release-process.md  user-guide.md
scripts/: list_climate_entities.py  sync-version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/installer-hooks/: auto-close-app.nsh
src-tauri/installer-languages/: English.nsh
src-tauri/src/: auto_power_on.rs  commands.rs  config.rs  ha_client.rs  main.rs  models.rs  secure_store.rs  startup.rs  tray.rs
src/app/: App.tsx
src/lib/: commands.ts  types.ts
src/pages/: ConfigPage.tsx  MainPage.tsx
src/styles/: app.css
